# BasketballAnalyitics

./: .gitignore  CMakeLists.txt  README.md  basketball.pro  qml.qrc
example/: import.json
src/: main.cpp  mainmodel.cpp  mainmodel.h
src/model/: basemodel.h  player.cpp  player.h  playerlistmodel.cpp  playerlistmodel.h  playerstatistics.cpp  playerstatistics.h  playertablemodel.cpp  playertablemodel.h  shot.cpp  shot.h  statistics.cpp  statistics.h  team.cpp  team.h  teamstatistics.cpp  teamstatistics.h
views/: BasketballCourtView.qml  CheckboxCombo.qml  PlayerListView.qml  PlayerStatistics.qml  PlayersTableView.qml  ReportTab.qml  ShotDialog.qml  StatisticCategory.qml  StatisticCategoryForm.ui.qml  Tabs.qml  TeamStatistics.qml  main.qml
